# backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.homolog.toml  fly.toml  pom.xml
.github/workflows/: build.yml  deploy.yml  rollback.yml
application/: pom.xml
application/src/main/java/com/aierview/application/: Application.java
application/src/test/java/com/aierview/application/: ApplicationTests.java
devops/prod/: Dockerfile
domain/: pom.xml
domain/src/main/java/com/aierview/domain/: DomainApplication.java
domain/src/test/java/com/aierview/domain/: DomainApplicationTests.java
infra/: pom.xml
infra/src/main/java/com/aierview/infra/: InfraApplication.java
infra/src/main/resources/: application.properties  application.yml
infra/src/test/java/com/aierview/infra/: InfraApplicationTests.java
src/main/java/com/aierview/backend/: BackendApplication.java  InterviewService.java
src/main/resources/: application-dev.properties  application-homolog.properties  application-test-db-error.properties  application-test-db-error.yml  application-test.properties  application-test.yml  application.properties  application.yml
src/main/resources/db/migration/: V1__create_users_and_auth_table.sql
src/test/java/com/aierview/backend/: BackendApplicationTests.java  InterviewServiceTests.java
src/test/java/com/aierview/backend/auth/: AuthTestDatabaseError.java
src/test/java/com/aierview/backend/interview/: InterviewTestDatabaseError.java
tts-service/: app.py  pyproject.toml
(+301 files in other folders)
